// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderSection should render children with section styles containing more paddingTop 1`] = `
.emotion-0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
}

<MyHeader
  className="emotion-0"
  headerSectionCss={
    Object {
      "boxSizing": "border-box",
      "paddingLeft": "16px",
      "paddingRight": "16px",
      "paddingTop": 20,
    }
  }
>
  <div
    className="emotion-0"
  >
    My Header
  </div>
</MyHeader>
`;

exports[`HeaderSection should render correctly 1`] = `
<Section
  alwaysShowScrollHint={false}
  shouldGrow={false}
  styles={[Function]}
>
  <unknown />
</Section>
`;

exports[`MenuSection should render Section with correct props 1`] = `
<Section
  alwaysShowScrollHint={false}
  shouldGrow={true}
  styles={[Function]}
>
  <unknown />
</Section>
`;

exports[`MenuSection should render children with section styles containing paddingBottom 1`] = `
.emotion-0 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 12px;
}

<MyHeader
  MenuSectionCss={
    Object {
      "boxSizing": "border-box",
      "paddingBottom": 12,
      "paddingLeft": "16px",
      "paddingRight": "16px",
    }
  }
  className="emotion-0"
>
  <div
    className="emotion-0"
  >
    My Header
  </div>
</MyHeader>
`;
